--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-direction-control",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A React Native component for handling directional inputs, perfect for interactive applications requiring gesture and directional control.",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "direction control",
     "touch input",
     "swipe detection"
-  ],  
+  ],
   "author": "Jerry Lee",
   "license": "MIT",
   "bugs": {
@@ -26,11 +26,11 @@
   },
   "homepage": "https://github.com/npmhub90/react-native-direction-control#readme",
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "^0.67.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react": "^17.0.2",
+    "react-native": "^0.67.5"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "@babel/core": "^7.0.0" 
   }
 }
