--- a/android/src/build.gradle
+++ b/android/src/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.npmhub.RNDeviceOrientation"
+        applicationId "com.npmhub.rndeviceorientation"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 1000
+        versionName "1.0.0"
     }
 
     buildTypes {
