--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-native-direction-control",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "A React Native component for handling directional inputs, perfect for interactive applications requiring gesture and directional control.",
   "main": "index.ts",
+  "nativePackage": true,
   "scripts": {
     "test": "jest"
   },
@@ -26,11 +27,13 @@
   },
   "homepage": "https://github.com/npmhub90/react-native-direction-control#readme",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-native": "^0.67.5"
+  },
+  "peerDependencies": {
+      "react": ">=16.13.1",
+      "react-native": ">=0.63.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "@babel/core": "^7.0.0" 
+      "react": "16.13.1",
+      "react-native": ">=0.63.2"
   }
 }
