--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-direction-control",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A React Native component for handling directional inputs, perfect for interactive applications requiring gesture and directional control.",
   "main": "index.ts",
   "nativePackage": true,
@@ -23,7 +23,12 @@
     "orientation lock",
     "react-native-orientation",
     "mobile screen control",
-    "adaptive UI"
+    "adaptive UI",
+    "react-native-gesture",
+    "user interface control",
+    "interactive components",
+    "touchscreen navigation",
+    "gesture-based navigation"
   ],
   "author": "Jerry Lee",
   "license": "MIT",
